Fix css grid overflowing columns
HHD-15

--- a/src/css/components/ShoppingItemInput.css
+++ b/src/css/components/ShoppingItemInput.css
@@ -6,7 +6,7 @@
 
 .ShoppingItemInputContainer {
   display: grid;
-  grid-template-columns: 50px 1fr;
+  grid-template-columns: 50px minmax(0, 1fr);
 }
 
 .shoppingItemInputNumber {
