--- a/src/css/components/WeekList.css
+++ b/src/css/components/WeekList.css
@@ -68,7 +68,7 @@
     display: grid;
     grid-auto-flow: column;
     grid-template-rows: repeat(10, auto);
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     column-gap: 2%;
 }
 
@@ -171,14 +171,14 @@
 @media only screen and (max-width: 1900px) {
     .bottomSection {
         grid-auto-flow: column;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
     }
 }
 
 @media only screen and (max-width: 1200px) {
     .bottomSection {
         grid-auto-flow: unset;
-        grid-template-columns: 1fr;
+        grid-template-columns: minmax(0, 1fr);
     }
 
     .shoppingItemViewMode input[type=checkbox] {
@@ -191,7 +191,7 @@
 @media only screen and (max-width: 600px) {
     .bottomSection {
         grid-auto-flow: unset;
-        grid-template-columns: 1fr;
+        grid-template-columns: minmax(0, 1fr);
     }
 
     .add-new-button {
